--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -40,7 +40,7 @@
     ]
   },
   "devDependencies": {
-    "react-redux": "^7.2.4",
-    "redux": "^4.1.0"
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   }
 }
